@@ -23,7 +23,8 @@ import com.badlogic.gdx.utils.Disposable;
 import com.mbrlabs.mundus.core.project.ProjectContext;
 import com.mbrlabs.mundus.input.InputManager;
 import com.mbrlabs.mundus.shader.Shaders;
-import com.mbrlabs.mundus.tools.brushes.SphereBrushTool;
+import com.mbrlabs.mundus.tools.brushes.FlattenBrush;
+import com.mbrlabs.mundus.tools.brushes.SphereBrush;
 
 /**
  * @author Marcus Brummer
@@ -35,7 +36,9 @@ public class ToolManager extends InputAdapter implements Disposable {
 
     private Tool activeTool;
 
-    public Tool sphereBrushTool;
+    public SphereBrush sphereBrushTool;
+    public FlattenBrush flattenBrush;
+
     public ModelPlacementTool modelPlacementTool;
     public TranslateTool translateTool;
     public SelectionTool selectionTool;
@@ -53,7 +56,9 @@ public class ToolManager extends InputAdapter implements Disposable {
         this.activeTool = null;
         this.shaders = shaders;
 
-        sphereBrushTool = new SphereBrushTool(projectContext, shaders.brushShader, modelBatch);
+        sphereBrushTool = new SphereBrush(projectContext, shaders.brushShader, modelBatch);
+        flattenBrush = new FlattenBrush(projectContext, shaders.brushShader, modelBatch);
+
         modelPlacementTool = new ModelPlacementTool(projectContext, shaders.entityShader, modelBatch);
         translateTool = new TranslateTool(projectContext, shaders.brushShader, modelBatch);
         selectionTool = new SelectionTool(projectContext, shaders.brushShader, modelBatch);
